--- a/index.html
+++ b/index.html
@@ -1,36 +1,68 @@
+<!DOCTYPE html>
 <html>
 
 <head>
+  <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
 
-  <title>AI Video Surveillance</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
+  <title>p5.play.Mario</title>
+  <!-- link p5.js and its addons like p5.dom.js or p5.sound.js -->
+  <script src="lib/p5.min.js" type="text/javascript"></script>
+  <!-- link p5.play.js -->
+  <script src="lib/p5.play.js" type="text/javascript"></script>
+  <!-- link p5.dom.js -->
+  <script src="lib/p5.dom.js" type="text/javascript"></script>
 
-  <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
+  <!-- link your javascript sketch -->
+  <script src="scripts/sprites.js" type="text/javascript"></script>
+
+  <script src="main.js" type="text/javascript"></script>
+
+  <script src="characters_environment.js" type="text/javascript"></script>
 
   <link rel="stylesheet" type="text/css" href="style.css">
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/addons/p5.sound.min.js"></script>
+
 </head>
 
 <body background="background.jpg">
   <center>
-    <h1 class="btn btn-warning heading"> AI Video Surveillance </h1>
+    <div class="btn btn-primary heading">
+      <h3> AI MARIO GAME </h3>
+      <button class="btn btn-primary" data-toggle="modal" data-target="#myModal"> Instructions </button>
+    </div>
+
+    <img src="mario.jpg" alt="image not found" class="big_imgae">
     <br><br>
-    <button id="start" class="btn btn-success"> Start </button>
+    <button class="btn btn-success" onclick="startGame()" id="start"> Play Game </button>
     <br><br>
-    <h3 id="number_of_objects" class="btn btn-warning"> </h3>
+    <h3 class="btn btn-warning" id="status"></h3>
     <br><br>
-    <h3 id="status" class="btn btn-danger"></h3>
+    <div id="canvas"></div>
+    <div id="game_console"></div>
+    <h4>
+      Source Code : <a href="https://github.com/linuk"> Linuk </a> || Game Credit : Mario
+    </h4>
+    <div id="myModal" class="modal fade">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <button class="close" data-dismiss="modal"> &times; </button>
+          <h4> Instructions </h4>
+
+          <div class="modal-body">
+            <img src="jump.png" class="instruction_image">
+            <img src="right.png" class="instruction_image">
+            <img src="left.png" class="instruction_image">
+          </div>
+        </div>
+      </div>
+    </div>
   </center>
-  <div class="copy_right_footer">
-    Developed By - Vighnesh Caskar
-  </div>
-
-  <script src="main.js"></script>
-
 </body>
 
 </html>
